# mcproto

./: .gitignore  Cargo.toml  README.md
mcproto/: Cargo.toml  README.md
mcproto-codec/: Cargo.toml  README.md
mcproto-codec/benches/: varint_bench.rs  varlong_bench.rs
mcproto-codec/src/: lib.rs  varint.rs  varlong.rs
mcproto-codec/tests/: varint_tests.rs  varlong_tests.rs
mcproto-derive/: Cargo.toml  README.md
mcproto-derive/src/: lib.rs
mcproto-nbt/: Cargo.toml
mcproto-nbt/src/: error.rs  lib.rs  reader.rs  tag.rs
mcproto-nbt/tests/: tests.rs
mcproto-types/: Cargo.toml  README.md
mcproto-types/src/: basic.rs  compound.rs  contextual.rs  lib.rs
mcproto-types/src/compound/: component.rs  enums.rs  structured_component.rs  subtypes.rs
mcproto/src/: lib.rs
