[workspace]
resolver = "3"
members = [
    "mcproto", # 主Crate，几乎是空的，用于控制feature
    "mcproto-codec", # Codec,包括VarInt，加密，压缩
    "mcproto-types" # 所有mc的类型
]

[workspace.package]
version = "0.1.4-alpha.1"
edition = "2024"
authors = ["MCSLTeam <services@mcsl.com.cn>"]
license = "GPL-3.0-only"
repository = "https://github.com/MCSLTeam/mcproto"

[workspace.dependencies]
mcproto-codec = { path = "./mcproto-codec", version = "0.1.4-alpha.1" }
mcproto-types = { path = "./mcproto-types", version = "0.1.4-alpha.1" }