[package]
name = "mcproto-codec"
version = "0.1.4-alpha.1"
edition = "2024"
authors = ["MCSLTeam <services@mcsl.com.cn>"]
description = "VarInt, encryption and compression coder & decoder for Minecraft protocols"
license = "GPL-3"
repository = "https://github.com/MCSLTeam/mcproto"
readme = "README.md"
keywords = ["Minecraft", "VarInt", "Codec", "Encryption", "Compression"]
categories = ["encoding", "compression", "cryptography", "network-programming", "game-development"]
[dependencies]
