[package]
name = "mcproto-codec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["Minecraft", "VarInt", "Codec", "Encryption", "Compression"]
categories = ["encoding", "compression", "cryptography", "network-programming", "game-development"]
[dependencies]
