[package]
name = "mcproto-nbt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NBT implementation for Minecraft protocols."
readme = "README.md"
keywords = ["Minecraft", "NBT", "Protocol", "Binary", "High-Performance"]
categories = ["encoding", "network-programming", "game-development"]

[dependencies]
thiserror = "2.0.18"
