[package]
name = "mcproto-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "All types for Minecraft."
keywords = ["Minecraft", "MC", "Type", "Protocol", "High-Performance"]
categories = ["encoding", "network-programming", "game-development"]
readme = "README.md"
[dependencies]
thiserror = "2.0.18"
derive_more = { version = "2.1.1", features = ["deref", "deref_mut", "into", "from"] }
mcproto-codec = { workspace = true }
uuid = "1.23.1"
