[package]
name = "mcproto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Minecraft protocols in Rust, async, fast and easy to use."
readme = "README.md"
keywords = ["Minecraft", "Serde", "MC", "Protocol", "Quick"]
categories = ["network-programming", "asynchronous", "game-development", "encoding"]

[features]
default = ["codec", "types"]
codec = ["dep:mcproto-codec"]
types = ["dep:mcproto-types"]
[dependencies]
mcproto-codec = { workspace = true, optional = true }
mcproto-types = { workspace = true, optional = true }
